[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Main.gd" type="Script" id=1]
[ext_resource path="res://Game/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/HUD.tscn" type="PackedScene" id=3]

[node name="Main" type="Spatial"]

script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="." index="0"]

transform = Transform( 0.932608, -0.255762, 0.254613, 0, 0.705513, 0.708697, -0.360891, -0.660937, 0.657967, 7.8149, 15.7062, 16.9183 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 11.0
size = 5.0
near = 0.05
far = 100.0

[node name="Board" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 0.92, 0, 0, 0, 0.92, 0, 0, 0, 0.92, 1.14777, -0.502145, 3.86449 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="2" instance=ExtResource( 3 )]

pause_mode = 2
_sections_unfolded = [ "Pause", "Size Flags" ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[connection signal="promote" from="Board" to="." method="promote"]

[connection signal="release" from="Board" to="." method="release"]

[connection signal="select" from="Board" to="." method="select"]

[connection signal="turn" from="Board" to="." method="change_turn"]

[connection signal="promoted" from="HUD" to="." method="finish_promotion"]

[connection signal="reset" from="HUD" to="." method="_on_HUD_reset"]

[connection signal="time" from="HUD" to="." method="_on_HUD_time"]


